# stoli-bot

./: .dockerignore  .gitignore  Dockerfile  docker-compose.debug.yml  docker-compose.yml  licence  pyproject.toml  requirements.txt
stoli_bot/: main.py
stoli_bot/src/: main.py
stoli_bot/src/bot/: client.py
stoli_bot/src/bot/beats/: extension.py  options.py
stoli_bot/src/models/: beat.py  producer.py
stoli_bot/src/services/: notion.py
stoli_bot/src/services/notion/: client.py  crud.py  model_utils.py
tests/services/notion/: crud_test.py
