[tool.poetry]
name = "stoli-bot"
version = "0.1.0"
description = ""
authors = ["1apostoli <79337131+1apostoli@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "stoli_bot"},
]

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"
python-dotenv = "^1.0.1"
discord-py-interactions = "^5.11.0"
notion-client = "^2.2.1"
supabase = "^2.3.4"
sqlalchemy = "^2.0.25"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pydantic = "^2.6.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    "tests/"
]
